--- a/pages/19061.html
+++ b/pages/19061.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -655,20 +655,26 @@ margin-left: 0em;
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Pavol+%C5%A0evera">Pavol Ševera</a>, Fridrich Valach, <em>Courant algebroids, Poisson-Lie T-duality, and type II supergravities</em> (<a href="https://arxiv.org/abs/1810.07763">arXiv:1810.07763</a>)</li>
 </ul>
+
+<p>Poisson-Lie T-duality can also be made manifest at the level of <a class="existingWikiWord" href="/nlab/show/type+II+supergravity">type II supergravity</a> in the framework of <a class="existingWikiWord" href="/nlab/show/double+field+theory">double field theory</a> on group manifolds. Using this framework both the NS/NS sector and the R/R sector are captured. It allowed to derive the transformation of the R/R fields for full Poisson-Lie T-duality for the first time.</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Falk+Hassler">Falk Hassler</a>, Poisson-Lie T-Duality in Double Field Theory, (<a href="https://arxiv.org/abs/1707.08624">arXiv:1707.08624</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January  9, 2019 at 01:04:06.
+  Last revised on January 14, 2019 at 02:49:15.
   See the <a href="https://ncatlab.org/nlab/history/Poisson-Lie T-duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Poisson-Lie T-duality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
