--- a/pages/20046.html
+++ b/pages/20046.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Dmitri Sorokin in nLab
+      Falk Hassler in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Dmitri Sorokin
+      Falk Hassler
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9453/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,42 +309,16 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
 <ul>
-<li><a href="http://www.perimeterinstitute.ca/people/dmitri-sorokin">webpage</a></li>
-</ul>
-
-<h2 id="selected_writings">selected writings</h2>
-
-<ul>
-<li id="Sorokin99">
-<p><a class="existingWikiWord" href="/nlab/show/Dmitri+Sorokin">Dmitri Sorokin</a>, Section 5.2 of <em>Superbranes and Superembeddings</em>, Phys.Rept.329:1-101, 2000 (<a href="http://arxiv.org/abs/hep-th/9906142">arXiv:hep-th/9906142</a>)</p>
-</li>
-
-<li id="Sorokin01">
-<p><a class="existingWikiWord" href="/nlab/show/Dmitri+Sorokin">Dmitri Sorokin</a>, <em>Introduction to the Superembedding Description of Superbranes</em>, AIP Conference Proceedings 589, 98 (2001) (<a href="https://arxiv.org/abs/hep-th/0105102">arXiv:hep-th/0105102</a>)</p>
-</li>
+<li><a href="http://www.fhassler.de">webpage</a></li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/super+p-brane">super p-brane</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/kappa-symmetry">kappa-symmetry</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/superembedding+approach">superembedding approach</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/M5-brane">M5-brane</a></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/Poisson-Lie+T-duality">Poisson-Lie T-duality</a></li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -352,22 +326,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 02:13:32.
-  See the <a href="https://ncatlab.org/nlab/history/Dmitri Sorokin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on January 14, 2019 at 02:53:02.
+  See the <a href="https://ncatlab.org/nlab/history/Falk Hassler" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dmitri+Sorokin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dmitri+Sorokin/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Dmitri+Sorokin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dmitri+Sorokin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Dmitri Sorokin/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Falk+Hassler" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Falk Hassler/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Dmitri+Sorokin" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Falk+Hassler" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Dmitri+Sorokin" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Falk+Hassler" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Dmitri+Sorokin" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Falk+Hassler" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
