--- a/pages/1866.html
+++ b/pages/1866.html
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,15 +572,21 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="differential_cohomology">Differential cohomology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/differential+cohomology">differential cohomology</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></p>
 </li>
@@ -563,7 +594,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a></p>
 </li>
-</ul><h2 id="connections_on_bundles">Connections on bundles</h2><ul>
+</ul>
+
+<h2 id="connections_on_bundles">Connections on bundles</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/connection+on+a+bundle">connection on a bundle</a></p>
 
@@ -597,7 +632,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_abelian_differential_cohomology">Higher abelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+function+complex">differential function complex</a></p>
 </li>
@@ -643,7 +682,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/differential+cobordism+cohomology">differential cobordism cohomology</a></p>
 </li>
-</ul><h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2><ul>
+</ul>
+
+<h2 id="higher_nonabelian_differential_cohomology">Higher nonabelian differential cohomology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/principal+2-bundle">principal 2-bundle</a>, <a class="existingWikiWord" href="/nlab/show/principal+%E2%88%9E-bundle">principal ∞-bundle</a></p>
 </li>
@@ -663,7 +706,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Chern-Simons+theory">∞-Chern-Simons theory</a></p>
 </li>
-</ul><h2 id="fiber_integration">Fiber integration</h2><ul>
+</ul>
+
+<h2 id="fiber_integration">Fiber integration</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+holonomy">higher holonomy</a></p>
 </li>
@@ -681,7 +728,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="application_to_gauge_theory">Application to gauge theory</h2><ul>
+</ul>
+
+<h2 id="application_to_gauge_theory">Application to gauge theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gauge+theory">gauge theory</a></p>
 </li>
@@ -719,11 +770,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/differential+cohomology+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -770,11 +822,16 @@ margin-left: 0em;
 <p>In the presence of a nontrivial <a class="existingWikiWord" href="/nlab/show/Kalb%E2%80%93Ramond+field">Kalb–Ramond field</a> the RR field is <a class="existingWikiWord" href="/nlab/show/twisted+cohomology">twisted</a>: a cocycle in the corresponding <a class="existingWikiWord" href="/nlab/show/twisted+K-theory">twisted K-theory</a>.</p>
 
 <p>Moreover, the RR field is constrained to be a <a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual</a> differential K-cocycle in a suitable sense.</p>
-<p><a class="existingWikiWord" href="/nlab/show/electric-magnetic+duality">electric-magnetic duality</a> of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a>/<a class="existingWikiWord" href="/nlab/show/RR-fields">RR-fields</a> in <a class="existingWikiWord" href="/nlab/show/type+II+string+theory">type II string theory</a>:</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/electric+charge">electric charge</a></th><th><a class="existingWikiWord" href="/nlab/show/magnetic+charge">magnetic charge</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D6-brane">D6-brane</a></td></tr>
+<div>
+<p><a class="existingWikiWord" href="/nlab/show/electric-magnetic+duality">electric-magnetic duality</a> of <a class="existingWikiWord" href="/nlab/show/D-branes">D-branes</a>/<a class="existingWikiWord" href="/nlab/show/RR-fields">RR-fields</a> in <a class="existingWikiWord" href="/nlab/show/type+II+string+theory">type II string theory</a>:</p>
+
+<table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/electric+charge">electric charge</a></th><th><a class="existingWikiWord" href="/nlab/show/magnetic+charge">magnetic charge</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D6-brane">D6-brane</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D1-brane">D1-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D5-brane">D5-brane</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D2-brane">D2-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D4-brane">D4-brane</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D3-brane">D3-brane</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D3-brane">D3-brane</a></td></tr>
 </tbody></table>
+
+</div>
 <p>The RR field derives its name from the way it shows up when the <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> theory in question is derived as an effective background theory in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>. From the <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> perspective of the string the RR field is the condensate of fermionic 0-mode excitations of the type II superstring for a particular choice of boundary conditons called the <em>Ramond</em> boundary condititions. Since these boundary conditions have to be chosen for <em>two</em> spinor components, the name appears twice.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -796,7 +853,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/KK-theory">KK-theory</a></p>
 </li>
 </ul>
-<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
+<div>
+<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p>
+
+<table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+II+supergravity">type II</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills theory</a></td></tr>
 <tr><td style="text-align: left;"><strong><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_1"><semantics><mrow><mo stretchy="false">(</mo><mi>D</mi><mo>=</mo><mn>2</mn><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(D = 2n)</annotation></semantics></math></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+IIA+supergravity">type IIA</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_2"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_3"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_4"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_5"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/BFSS+matrix+model">BFSS matrix model</a></td></tr>
@@ -830,6 +890,8 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+string">self-dual string</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+field">self-dual</a> <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/3-brane+in+6d">3-brane in 6d</a></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 </tbody></table>
+
+</div>
 <h2 id="references">References</h2>
 
 <h3 id="general">General</h3>
@@ -921,14 +983,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 10, 2018 at 13:45:21.
+  Last revised on January 14, 2019 at 03:04:24.
   See the <a href="https://ncatlab.org/nlab/history/RR field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/RR+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR+field/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/RR+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/RR field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
