--- a/pages/20046.html
+++ b/pages/20046.html
@@ -309,10 +309,16 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <ul>
 <li><a href="http://www.fhassler.de">webpage</a></li>
+</ul>
+
+<h2 id="selected_writings">selected writings</h2>
+
+<ul>
+<li id="Hassler17"><a class="existingWikiWord" href="/nlab/show/Falk+Hassler">Falk Hassler</a>, <em>Poisson-Lie T-Duality in Double Field Theory</em> (<a href="https://arxiv.org/abs/1707.08624">arXiv:1707.08624</a>)</li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
@@ -326,14 +332,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on January 14, 2019 at 02:53:02.
+  Last revised on January 14, 2019 at 03:06:46.
   See the <a href="https://ncatlab.org/nlab/history/Falk Hassler" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Falk+Hassler" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Falk+Hassler" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Falk+Hassler/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Falk+Hassler" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Falk+Hassler" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Falk Hassler/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
