--- a/pages/20052.html
+++ b/pages/20052.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -430,7 +430,15 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#valuations_on_lattices'>Valuations on lattices</a></li>
+<li><a href='#valuations_on_locales_and_topological_spaces'>Valuations on locales and topological spaces</a></li>
+</ul>
 <li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#dirac_valuation'>Dirac valuation</a></li>
+<li><a href='#borel_measures'>Borel measures</a></li>
+</ul>
 <li><a href='#properties'>Properties</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -438,15 +446,76 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>(…)</p>
+<p>A <strong>valuation</strong> is a construction analogous to that of a <a class="existingWikiWord" href="/nlab/show/measure">measure</a>, which is however more compatible with <a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a>, and readily generalizable to contexts such as <a class="existingWikiWord" href="/nlab/show/point-free+topology">point-free topology</a>.</p>
 
 <h2 id="definition">Definition</h2>
 
-<p>(…)</p>
+<h3 id="valuations_on_lattices">Valuations on lattices</h3>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a <a class="existingWikiWord" href="/nlab/show/lattice">lattice</a> with a bottom element <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>⊥</mo></mrow><annotation encoding="application/x-tex">\bottom</annotation></semantics></math>. A <strong>valuation</strong> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is a map <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo>:</mo><mi>L</mi><mo>→</mo><msub><mi>ℝ</mi> <mrow><mo>≥</mo><mn>0</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\nu:L\to\mathbb{R}_{\ge 0}</annotation></semantics></math> with the following properties:</p>
+
+<ul>
+<li>
+<p><em>Monotonicity</em>: for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x,y</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>≤</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x\le y</annotation></semantics></math> implies <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>≤</mo><mi>ν</mi><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\nu(x)\le\nu(y)</annotation></semantics></math>;</p>
+</li>
+
+<li>
+<p><em>Strictness</em> (or <a class="existingWikiWord" href="/nlab/show/unitality">unitality</a>): <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo stretchy="false">(</mo><mo>⊥</mo><mo stretchy="false">)</mo><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">\nu(\bottom)=0</annotation></semantics></math>;</p>
+</li>
+
+<li>
+<p><em>Modularity</em>: for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>,</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x,y</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>,</p>
+</li>
+</ul>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>+</mo><mi>ν</mi><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo><mo>=</mo><mi>ν</mi><mo stretchy="false">(</mo><mi>x</mi><mo>∨</mo><mi>y</mi><mo stretchy="false">)</mo><mo>+</mo><mi>ν</mi><mo stretchy="false">(</mo><mi>x</mi><mo>∧</mo><mi>y</mi><mo stretchy="false">)</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">
+\nu(x) + \nu(y) = \nu(x \vee y) + \nu(x \wedge y) .
+
+</annotation></semantics></math></div>
+<p>The real line can be replaced, depending on the context, by the space of <a class="existingWikiWord" href="/nlab/show/one-sided+real+number">lower reals</a>.</p>
+
+<p>Moreover, we call a valuation <em>continuous</em> if the following property holds, which is an instance of <a class="existingWikiWord" href="/nlab/show/Scott+topology">Scott continuity</a>, as well as of <span class="newWikiWord"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
+  <semantics>
+    <mrow>
+      <mi>τ</mi>
+    </mrow>
+    <annotation encoding="application/x-tex">\tau</annotation>
+  </semantics>
+</math>-smoothness<a href="/nlab/new/tau+smoothness">?</a></span>:</p>
+
+<ul>
+<li><em>Continuity</em>: for every directed net <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><msub><mi>x</mi> <mi>λ</mi></msub><msub><mo stretchy="false">}</mo> <mrow><mi>λ</mi><mo>∈</mo><mi>Λ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\{x_\lambda\}_{\lambda\in\Lambda}</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> admitting a supremum,</li>
+</ul>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ν</mi><mo maxsize="1.2em" minsize="1.2em">(</mo><munder><mi>sup</mi> <mi>λ</mi></munder><msub><mi>x</mi> <mi>λ</mi></msub><mo maxsize="1.2em" minsize="1.2em">)</mo><mo>=</mo><munder><mi>sup</mi> <mi>λ</mi></munder><mi>ν</mi><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>λ</mi></msub><mo stretchy="false">)</mo><mo>.</mo></mrow><annotation encoding="application/x-tex">
+\nu \big( \sup_{\lambda} x_\lambda \big) = \sup_\lambda \nu(x_\lambda) .
+
+</annotation></semantics></math></div>
+<h3 id="valuations_on_locales_and_topological_spaces">Valuations on locales and topological spaces</h3>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> be a locale. Then a valuation on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> is by definition a valuation on its <a class="existingWikiWord" href="/nlab/show/frame">frame</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒪</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathcal{O}(L)</annotation></semantics></math>. In particular, a valuation on a topological space is a valuation on the lattice of its open sets.</p>
 
 <h2 id="examples">Examples</h2>
 
-<p>(…)</p>
+<h3 id="dirac_valuation">Dirac valuation</h3>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> be a topological space, and let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">x\in X</annotation></semantics></math> be a point. The <strong>Dirac valuation</strong> at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math> maps an open set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>U</mi><mo>⊆</mo><mi>X</mi></mrow><annotation encoding="application/x-tex">U\subseteq X</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>1</mn></mrow><annotation encoding="application/x-tex">1</annotation></semantics></math> if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>∈</mo><mi>U</mi></mrow><annotation encoding="application/x-tex">x\in U</annotation></semantics></math>, and to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>0</mn></mrow><annotation encoding="application/x-tex">0</annotation></semantics></math> otherwise.</p>
+
+<h3 id="borel_measures">Borel measures</h3>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> be a topological space, and let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> be a measure defined on the <a class="existingWikiWord" href="/nlab/show/Borel+subset">Borel <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
+  <semantics>
+    <mrow>
+      <mi>σ</mi>
+    </mrow>
+    <annotation encoding="application/x-tex">\sigma</annotation>
+  </semantics>
+</math>-algebra</a>. Then the restriction of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> to the open subsets of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is a valuation. The valuation is continuous if and only if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>μ</mi></mrow><annotation encoding="application/x-tex">\mu</annotation></semantics></math> is <span class="newWikiWord"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml">
+  <semantics>
+    <mrow>
+      <mi>τ</mi>
+    </mrow>
+    <annotation encoding="application/x-tex">\tau</annotation>
+  </semantics>
+</math>-smooth<a href="/nlab/new/tau-smoothness">?</a></span>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -457,7 +526,13 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Valuation_(measure_theory)">Valuation (measure theory)</a></em></li>
+<li>
+<p>Steve Vickers, <em>A monad of valuation locales</em>, <a href="https://www.cs.bham.ac.uk/~sjv/Riesz.pdf">available here</a>.</p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Valuation_(measure_theory)">Valuation (measure theory)</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -465,14 +540,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on January 14, 2019 at 06:15:50.
+  Last revised on January 14, 2019 at 09:57:02.
   See the <a href="https://ncatlab.org/nlab/history/valuation (measure theory)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation+%28measure+theory%29/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/valuation+%28measure+theory%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation+%28measure+theory%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/valuation (measure theory)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
