--- a/pages/1720.html
+++ b/pages/1720.html
@@ -778,6 +778,7 @@ margin-left: 0em;
 <li><a href='#slice_categories'>Slice categories</a></li>
 <li><a href='#local_cartesian_closure'>Local cartesian closure</a></li>
 </ul>
+<li><a href='#related_pages'>Related pages</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -1000,7 +1001,7 @@ margin-left: 0em;
 
 <p>Motice that the prop. <a class="maruku-ref" href="#GoodPullbacksAndPushouts"></a> applies only (in the right proper case, for concreteness) to pullbacks of fibrations along weak equivalences in which <em>all three</em> objects are fibrant, since a fibration with fibrant codomain also has fibrant domain. The definition of right proper, on the other hand, states this property in the case when <em>none</em> of the objects are assumed to be fibrant.</p>
 
-<p>One might consider as an “in-between” assumption the situation when only the common codomain of the fibration and the weak equivalence (hence also the domain of the fibration) are fibrant; but it turns out that this apparently-weaker assumption is sufficient to imply full right properness. This can be found, for instance, as Lemma 9.4 of Bousfield’s <em>On the Telescopic Homotopy Theory of Spaces</em>.</p>
+<p>One might consider as an “in-between” assumption the situation when only the common codomain of the fibration and the weak equivalence (hence also the domain of the fibration) are fibrant; but it turns out that this apparently-weaker assumption is sufficient to imply full right properness. This can be found, for instance, as Lemma 9.4 of <a href="#Bousfield01">Bousfield 2001</a>.</p>
 
 <div class="num_prop" id="FibrationsBetweenFibrantObjectsSuffice">
 <h6 id="proposition_2">Proposition</h6>
@@ -1236,6 +1237,12 @@ margin-left: 0em;
 
 <p>However, if a <a class="existingWikiWord" href="/nlab/show/Cisinski+model+category">Cisinski model category</a> is right proper, then the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,1)</annotation></semantics></math>-category which it presents must be <a class="existingWikiWord" href="/nlab/show/locally+cartesian+closed+%28%E2%88%9E%2C1%29-category">locally cartesian closed</a>. Conversely, any locally cartesian closed (∞,1)-category has a presentation by a right proper Cisinski model category; see <a class="existingWikiWord" href="/nlab/show/locally+cartesian+closed+%28%E2%88%9E%2C1%29-category">locally cartesian closed (∞,1)-category</a> for the proof.</p>
 
+<h2 id="related_pages">Related pages</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/semi-left-exact+left+Bousfield+localization">semi-left-exact left Bousfield localization</a></li>
+</ul>
+
 <h2 id="references">References</h2>
 
 <p>The concept originates in</p>
@@ -1262,6 +1269,12 @@ margin-left: 0em;
 <li id="Reedy"><a class="existingWikiWord" href="/nlab/show/Chris+Reedy">Chris Reedy</a>, <em>Homotopy theory of model categories</em> (<a href="http://www-math.mit.edu/~psh/reedy.pdf">pdf</a>)</li>
 </ul>
 
+<p>Proposition <a class="maruku-ref" href="#FibrationsBetweenFibrantObjectsSuffice"></a> can be found in</p>
+
+<ul>
+<li id="Bousfield01"><a class="existingWikiWord" href="/nlab/show/Aldridge+Bousfield">Aldridge Bousfield</a>, <em>On the telescopic homotopy theory of spaces</em>, Trans. Amer. Math. Soc. 353 (2001), 2391-2426, <a href="https://www.ams.org/journals/tran/2001-353-06/S0002-9947-00-02649-0/">web with fulltext</a></li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -1283,14 +1296,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 14:00:34.
+  Last revised on January 14, 2019 at 19:51:23.
   See the <a href="https://ncatlab.org/nlab/history/proper model category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/proper+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proper+model+category/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/proper+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proper+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/proper+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proper+model+category/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/proper+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proper+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/proper model category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
