--- a/pages/2920.html
+++ b/pages/2920.html
@@ -2178,6 +2178,10 @@ C(Q A,P X)</annotation></semantics></math> is a weak equivalence.</p>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/localization+at+an+object">localization at an object</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/semi-left-exact+left+Bousfield+localization">semi-left-exact left Bousfield localization</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -2229,14 +2233,14 @@ C(Q A,P X)</annotation></semantics></math> is a weak equivalence.</p>
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 16:33:37.
+  Last revised on January 14, 2019 at 19:50:55.
   See the <a href="https://ncatlab.org/nlab/history/Bousfield localization of model categories" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bousfield+localization+of+model+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield+localization+of+model+categories/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/Bousfield+localization+of+model+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield+localization+of+model+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bousfield+localization+of+model+categories" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield+localization+of+model+categories/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/Bousfield+localization+of+model+categories" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield+localization+of+model+categories" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bousfield localization of model categories/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
