--- a/pages/233.html
+++ b/pages/233.html
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="higher_algebra">Higher algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p><h2 id="algebraic_theories">Algebraic theories</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+
+<h2 id="algebraic_theories">Algebraic theories</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+theory">algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/2-algebraic+theory">2-algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory">(∞,1)-algebraic theory</a></p>
 </li>
@@ -329,7 +337,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/operad">operad</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-operad">(∞,1)-operad</a></p>
 </li>
-</ul><h2 id="algebras_and_modules">Algebras and modules</h2><ul>
+</ul>
+
+<h2 id="algebras_and_modules">Algebras and modules</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra over a monad</a></p>
 
@@ -363,7 +375,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/associated+bundle">associated bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a></p>
 </li>
-</ul><h2 id="higher_algebras">Higher algebras</h2><ul>
+</ul>
+
+<h2 id="higher_algebras">Higher algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
 
@@ -433,7 +449,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation theory</a></li>
 </ul>
 </li>
-</ul><h2 id="model_category_presentations">Model category presentations</h2><ul>
+</ul>
+
+<h2 id="model_category_presentations">Model category presentations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+T-algebras">model structure on simplicial T-algebras</a> / <a class="existingWikiWord" href="/nlab/show/homotopy+T-algebra">homotopy T-algebra</a></p>
 </li>
@@ -443,7 +463,11 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+algebras+over+an+operad">model structure on algebras over an operad</a></p>
 </li>
-</ul><h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2><ul>
+</ul>
+
+<h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -451,7 +475,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Deligne+conjecture">Deligne conjecture</a></p>
 </li>
@@ -463,13 +491,26 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/higher+algebra+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 
 <h4 id="higher_linear_algebra">Higher linear algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p><p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p><p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p><p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p><p><strong>Introductions</strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p>
+
+<p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p>
+
+<p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p>
+
+<p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology+--+2">Introduction to Basic Homotopy Theory</a></p>
 </li>
@@ -481,7 +522,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometry+of+physics+--+homotopy+types">geometry of physics – homotopy types</a></p>
 </li>
-</ul><p><strong>Definitions</strong></p><ul>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy">homotopy</a>, <a class="existingWikiWord" href="/nlab/show/higher+homotopy">higher homotopy</a></p>
 </li>
@@ -533,7 +578,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+category+of+an+%28%E2%88%9E%2C1%29-category">homotopy category of an (∞,1)-category</a></li>
 </ul>
 </li>
-</ul><p><strong>Paths and cylinders</strong></p><ul>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a></p>
 
@@ -579,7 +628,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong>Homotopy groups</strong></p><ul>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+group">homotopy group</a></p>
 
@@ -635,9 +688,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+category">fundamental category</a></li>
 </ul>
 </li>
-</ul><p><strong>Basic facts</strong></p><ul>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+group+of+the+circle+is+the+integers">fundamental group of the circle is the integers</a></li>
-</ul><p><strong>Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+covering+spaces">fundamental theorem of covering spaces</a></p>
 </li>
@@ -673,7 +734,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+hypothesis">homotopy hypothesis</a>-theorem</p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -805,8 +867,8 @@ margin-left: 0em;
 <h4 id="stabilized_overcategories">Stabilized overcategories</h4>
 
 <p>A module <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> over a (commutative, unital) ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> may be encoded in another ring: the one that as an abelian group is the <a class="existingWikiWord" href="/nlab/show/direct+sum">direct sum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo>⊕</mo><mi>N</mi></mrow><annotation encoding="application/x-tex">R \oplus N</annotation></semantics></math> and whose product is defined by the formulas</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>n</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>⋅</mo><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>n</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>:</mo><mo>=</mo><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>1</mn></msub><msub><mi>r</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>r</mi> <mn>1</mn></msub><msub><mi>n</mi> <mn>1</mn></msub><mo>+</mo><msub><mi>r</mi> <mn>2</mn></msub><msub><mi>n</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
-  (r_1, n_1) \cdot (r_2,n_2) := (r_1 r_2, r_1 n_1 + r_2 n_2)
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>n</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>⋅</mo><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>n</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>:</mo><mo>=</mo><mo stretchy="false">(</mo><msub><mi>r</mi> <mn>1</mn></msub><msub><mi>r</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>r</mi> <mn>2</mn></msub><msub><mi>n</mi> <mn>1</mn></msub><mo>+</mo><msub><mi>r</mi> <mn>1</mn></msub><msub><mi>n</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  (r_1, n_1) \cdot (r_2,n_2) := (r_1 r_2, r_2 n_1 + r_1 n_2)
   \,.
 
 </annotation></semantics></math></div>
@@ -1231,14 +1293,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 12:52:17.
+  Last revised on January 15, 2019 at 15:33:36.
   See the <a href="https://ncatlab.org/nlab/history/module" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/module" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/module/71" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(71 revisions)</span> | <a href="/nlab/show/diff/module" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/module" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/module" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/module/72" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(72 revisions)</span> | <a href="/nlab/show/diff/module" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/module" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/module/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
